--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 03:05:02 2018</p>
+         Last Run: Sun Nov 18 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>19</td>
-                        <td>63</td>
+                        <td>18</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>95</td>
+                        <td>WNW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>19</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>18</td>
                         <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>17</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>91</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "2",
-                 "2"
+                 "1",
+                 "3"
                ]
              },
              {
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "5",
+                 "4",
                  "5"
                ]
              }
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "19",
+                 "18",
+                 "18",
                  "17"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
+                 "62",
                  "65",
-                 "64"
+                 "63"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "97",
-                 "91"
+                 "96",
+                 "96",
+                 "95"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 03:05:02 2018</p>
+         Last Run: Sun Nov 18 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>69</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -273,7 +273,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "2"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "68",
                  "69",
-                 "71",
-                 "71"
+                 "70"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
+                 "9",
                  "7",
                  "7"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 03:05:02 2018</p>
+         Last Run: Sun Nov 18 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -467,7 +467,7 @@
                         <td>50</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>65</td>
                      </tr>
                      <tr>
