--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 05:05:02 2018</p>
+         Last Run: Sun Nov 18 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,20 +33,20 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>63</td>
+                        <td>13</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>97</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>65</td>
+                        <td>15</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
@@ -57,7 +57,7 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>16</td>
+                        <td>17</td>
                         <td>63</td>
                         <td>0</td>
                         <td>10</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "18",
-                 "16"
+                 "13",
+                 "15",
+                 "17"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "61",
                  "63",
-                 "65",
                  "63"
                ]
              },
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
+                 "95",
                  "96",
                  "95"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 05:05:02 2018</p>
+         Last Run: Sun Nov 18 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,19 +253,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "2",
+                 "3",
                  "2"
                ]
              },
@@ -388,7 +388,7 @@
                "data":[
                  "68",
                  "69",
-                 "70"
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
                  "7",
-                 "7"
+                 "5",
+                 "5"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 05:05:02 2018</p>
+         Last Run: Sun Nov 18 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
@@ -468,31 +468,31 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>65</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>1</td>
-                        <td>52</td>
+                        <td>0</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>1</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>0</td>
                         <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "3",
                  "2",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "1"
+                 "0",
+                 "0"
                ]
              },
              {
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "52",
+                 "51",
                  "53"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "59",
-                 "54"
+                 "57",
+                 "51",
+                 "44"
                ]
              }
            ]
