--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 06:05:02 2018</p>
+         Last Run: Sun Nov 18 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>7</td>
                         <td>61</td>
                         <td>0</td>
                         <td>13</td>
@@ -45,19 +45,19 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>15</td>
+                        <td>12</td>
                         <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>17</td>
+                        <td>13</td>
                         <td>63</td>
                         <td>0</td>
                         <td>10</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "15",
-                 "17"
+                 "7",
+                 "12",
+                 "13"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "96",
+                 "97",
                  "95"
                ]
              }
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 06:05:02 2018</p>
+         Last Run: Sun Nov 18 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -260,24 +261,24 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>71</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +307,7 @@
                "data":[
                  "-2",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              },
              {
@@ -318,7 +319,7 @@
                "data":[
                  "1",
                  "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -376,7 +377,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
+                 "2",
                  "2"
                ]
              },
@@ -388,7 +389,7 @@
                "data":[
                  "68",
                  "69",
-                 "71"
+                 "69"
                ]
              },
              {
@@ -398,8 +399,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "7",
-                 "5",
-                 "5"
+                 "8",
+                 "6"
                ]
              }
            ]
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 06:05:02 2018</p>
+         Last Run: Sun Nov 18 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +465,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -480,17 +481,17 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
                         <td>44</td>
                      </tr>
@@ -521,7 +522,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -533,7 +534,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -601,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "51",
                  "51",
                  "53"
                ]
@@ -613,7 +614,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "57",
-                 "51",
+                 "50",
                  "44"
                ]
              }
