--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 08:05:02 2018</p>
+         Last Run: Sun Nov 18 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>4</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>61</td>
+                        <td>2</td>
+                        <td>30</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>7</td>
-                        <td>63</td>
+                        <td>9</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>97</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
-                        <td>3</td>
-                        <td>11</td>
+                        <td>2</td>
+                        <td>8</td>
                         <td>63</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "2",
                  "1",
-                 "1",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "7",
-                 "11"
+                 "30",
+                 "9",
+                 "8"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "63",
+                 "69",
+                 "64",
                  "63"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "97",
-                 "95"
+                 "92",
+                 "93",
+                 "97"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 08:05:02 2018</p>
+         Last Run: Sun Nov 18 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -262,23 +262,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>3</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>4</td>
+                        <td>WSW</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -378,7 +378,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -388,8 +388,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "67",
-                 "68"
+                 "69",
+                 "71"
                ]
              },
              {
@@ -399,8 +399,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "6",
-                 "4"
+                 "7",
+                 "7"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 08:05:02 2018</p>
+         Last Run: Sun Nov 18 09:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -465,7 +465,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -602,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "51",
                  "53"
                ]
